--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "nodemon": "^1.14.6"
   },
   "dependencies": {
+    "aimlinterpreter": "^0.1.7",
     "concurrently": "^3.5.1",
     "express": "^4.16.2",
     "react-infinite-scroll-component": "^4.2.0",
