--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,8 +19,10 @@
     "aimlinterpreter": "^0.1.7",
     "concurrently": "^3.5.1",
     "express": "^4.16.2",
+    "natural": "^0.6.1",
     "react-infinite-scroll-component": "^4.2.0",
     "react-infinite-scroller": "^1.2.1",
-    "react-router-dom": "^4.3.1"
+    "react-router-dom": "^4.3.1",
+    "wordnet-db": "^3.1.11"
   }
 }
