--- a/aiml-WEB/package.json
+++ b/aiml-WEB/package.json
@@ -19,6 +19,7 @@
     "aimlinterpreter": "^0.1.7",
     "concurrently": "^3.5.1",
     "express": "^4.16.2",
+    "js2xmlparser": "^3.0.0",
     "natural": "^0.6.1",
     "react-infinite-scroll-component": "^4.2.0",
     "react-infinite-scroller": "^1.2.1",
