--- a/aiml-WEB/package.json
+++ b/aiml-WEB/package.json
@@ -21,6 +21,7 @@
     "express": "^4.16.2",
     "js2xmlparser": "^3.0.0",
     "natural": "^0.6.1",
+    "node-fetch": "^2.2.0",
     "react-infinite-scroll-component": "^4.2.0",
     "react-infinite-scroller": "^1.2.1",
     "react-router-dom": "^4.3.1",
